2024-01-23T08:09:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7622762337 # 49
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-23
* notice: last 14d: unq all: 5 21
* notice: prev accum: outdated-unq outdated-all / unq all: 305 646 / 319 667
* notice: next accum: outdated-unq outdated-all / unq all: 305 646 / 320 668
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-09 2024-01-23]

2024-01-22T16:08:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7614004414 # 47
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-22
* notice: last 14d: unq all: 5 21
* notice: prev accum: outdated-unq outdated-all / unq all: 304 644 / 319 666
* notice: next accum: outdated-unq outdated-all / unq all: 305 646 / 319 667
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-01-08] / [2024-01-22]

2024-01-22T08:09:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7608180646 # 46
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-22
* notice: last 14d: unq all: 5 21
* notice: prev accum: outdated-unq outdated-all / unq all: 304 644 / 318 665
* notice: next accum: outdated-unq outdated-all / unq all: 304 644 / 319 666
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-08 2024-01-22]

2024-01-21T16:07:01Z: