@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-23T08:09:36Z",
-  "count_outdated" : 646,
-  "uniques_outdated" : 305,
-  "count" : 668,
-  "uniques" : 320,
+  "timestamp" : "2024-01-23T16:08:24Z",
+  "count_outdated" : 648,
+  "uniques_outdated" : 306,
+  "count" : 670,
+  "uniques" : 321,
   "clones" : [
-    {
-      "timestamp": "2024-01-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-10T00:00:00Z",
       "count": 3,
@@ -97,12 +88,12 @@
     },
     {
       "timestamp": "2024-01-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
