@@ -1,12 +1,7 @@
 {
-  "count": 21,
-  "uniques": 5,
+  "count": 22,
+  "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2024-01-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-10T00:00:00Z",
       "count": 3,
@@ -54,8 +49,8 @@
     },
     {
       "timestamp": "2024-01-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
